# dk.brics.automaton

./: WORKSPACE  build.gradle
src/dk/brics/automaton/: AutomatonCoverage.java  BUILD.bazel  TransitionTable.java
src/main/java/dk/brics/automaton/: Automaton.java  AutomatonCoverage.java  Egret.java  GenerateStrings.java  RegExp.java  RunAutomaton.java  TransitionTable.java
src/test/java/dk/brics/automaton/: AutomatonCoverageTest.java  EgretTest.java  GenStrTest.java  RegExpTest.java
testing/: BUILD.bazel  CoverageToyMain.java  TestMain.java
